@@ -48,6 +48,8 @@ PHP                                                                        NEWS
   . Invalid filters fails instead of returning unsafe value
 - Fixed wrong signature initialization in imagepng (Takeshi Abe)
 - Added optimization for imageline with horizontal and vertial lines (Pierre)
+- Fixed bug #39724 (Broken build due to spl/filter usage of pcre extension).
+  (Tony, Ilia)
 - Fixed bug #39718 (possible crash if assert.callback is set in ini). (Ilia)
 - Fixed bug #39702 (php crashes in the allocator on linux-m68k). (Dmitry)
 - Fixed bug #39673 (file_get_contents causes bus error on certain offsets). 
